# SoftwareEngineeringPractice-I

./: .gitignore  README.md
2022 Assignment 1 Linked List/: LinkedList.cpp  LinkedList.h  Polynomial.cpp  Polynomial.h  homework1  homework1.cpp  input  output  实验报告.md
2022 Assignment 2 GUI/: 实验报告.md  环形链表删除.excalidraw  环形链表插入.excalidraw
2022 Assignment 2 GUI/MonkeyKing/: CMakeLists.txt  cyclelinkedlist.cpp  cyclelinkedlist.h  edge.cpp  edge.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h  res.qrc
2022 Assignment 3 Stack/: 实验报告.md
2022 Assignment 3 Stack/Calculator/: CMakeLists.txt  CMakeLists.txt.user.05b9e1b  CMakeLists.txt.user.b8d2653  expression.cpp  expression.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stack.cpp  stack.h  xbstack.cpp  xbstack.h
2022 Assignment 4 Queues/: 实验报告.md
2022 Assignment 4 Queues/ParkingManager/: AnimationCar.cpp  AnimationCar.h  CMakeLists.txt  CMakeLists.txt.user.05b9e1b  CMakeLists.txt.user.b8d2653  GraphicsItemCar.cpp  GraphicsItemCar.h  GraphicsItemGate.h  GraphicsItemParkingSlot.cpp  GraphicsItemParkingSlot.h  GraphicsViewCarPark.cpp  GraphicsViewCarPark.h  GraphicsViewCarQueue.cpp  GraphicsViewCarQueue.h  MyAnimation.cpp  MyAnimation.h  Queue.cpp  Queue.h  car_graphics_item.cpp  car_graphics_item.h  carpark_graphics_view.cpp  carpark_graphics_view.h  gate_graphics_item.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parking_slot_graphics_item.cpp  parking_slot_graphics_item.h
2022 Assignment 4 Queues/实验报告.assets/: openfile.pjpeg
2022 Assignment 5 Tree/: bb.huffmanzip  draft.md  testin  testin-compressed.huffmanzip  tt.huffmanzip  实验报告.md
2022 Assignment 5 Tree/Compressor/: CMakeLists.txt  compress_file_item_model.h  compressed_file_item.h  compressed_file_item_model.cpp  compressed_file_item_model.h  drag_drop_tree_view.cpp  drag_drop_tree_view.h  main.cpp
2022 Assignment 5 Tree/HuffmanCompressor/: CMakeLists.txt  main.cpp
2022 Assignment 5 Tree/HuffmanCompressor/libs/: HuffmanCompress.cpp  HuffmanCompress.h  HuffmanTree.cpp  HuffmanTree.h
2022 Assignment 5 Tree/HuffmanCompressor/models/: FileTreeItem.cpp  FileTreeItem.h  FileTreeItemModel.cpp  FileTreeItemModel.h
2022 Assignment 5 Tree/HuffmanCompressor/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
2022 Assignment 5 Tree/HuffmanCompressor/utils/: BytesReader.cpp  BytesReader.h  BytesSaver.cpp  BytesSaver.h  Utils.cpp  Utils.h
2022 Assignment 5 Tree/HuffmanCompressor/views/: FileTreeView.cpp  FileTreeView.h
2022 Assignment 5 Tree/HuffmanCompressor_Qt/: CMakeLists.txt  compress_file_item_model.cpp  compressed_file.cpp  compressed_file.h  compressed_file_item.cpp  huffman_tree.cpp  huffman_tree.h  mainwindow.ui
2022 Assignment 5 Tree/testFiles/: archive.huffmanzip  binfile-optimized.huffmanzip  binfile.huffmanzip
2022 Assignment 6 Graph/: 实验报告.md
2022 Assignment 6 Graph/BJTUGuide/: CMakeLists.txt  main.cpp
2022 Assignment 6 Graph/BJTUGuide/graphics/: Edge.cpp  Edge.h  InterestPointGraphicsItem.cpp  InterestPointGraphicsItem.h
2022 Assignment 6 Graph/BJTUGuide/models/: EdgeData.h  InterestPoint.cpp  InterestPoint.h  InterestPointData.h  InterestPointList.cpp  InterestPointList.h
2022 Assignment 6 Graph/BJTUGuide/storage/: Database.cpp  Database.h  InitDB.h
2022 Assignment 6 Graph/BJTUGuide/ui/: MySwitch.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.qml  ui_mainwindow.h
2022 Assignment 6 Graph/BJTUGuide/utils/: GeoUtils.h
2022 Course Project - I/: 1. 立项.md  小组自选项目-要求.md  项目立项报告草稿.md
